rt/test/errors/038/test.volt
module test;

fn init(x: i32)
{
}

fn main() i32
{
    init(12);
    return 0;
}
